Issue 276:	Support a multi tenant.
Update issue 276
I fixed a regression bug with this issue.

git-svn-id: https://infoscoop.googlecode.com/svn/branches/3.0@690 d4e23b88-c782-11de-b6dc-25c59a28ecba