@@ -20,7 +20,6 @@ package org.infoscoop.command;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.infoscoop.account.DomainManager;
 import org.infoscoop.command.util.XMLCommandUtil;
 import org.infoscoop.dao.TabDAO;
 import org.infoscoop.dao.WidgetDAO;
@@ -110,12 +109,11 @@ public class AddWidget extends XMLCommandProcessor{
 
     	Widget widget = new Widget();
 		widget.setTabid(tabId);
-		widget.setFkDomainId(DomainManager.getContextDomainId());
 		widget.setWidgetid(widgetId);
 		widget.setUid(uid);
 		
     	if(targetColumn != null && !"".equals(targetColumn)){
-    		widget.setColumn(new Integer(targetColumn));
+    		widget.setColumn(Integer.valueOf(targetColumn));
     	}
     	widget.setSiblingid(sibling);
     	widget.setParentid(parent);
